Submit to API - Submit Action & Fields Mapper Component base layout

--- a/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/sitecore/shell/client/Applications/FormsBuilder/Layouts/Renderings/SitecoreMods/FormFieldsMapper/FormFieldsMapper.cshtml
+++ b/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/sitecore/shell/client/Applications/FormsBuilder/Layouts/Renderings/SitecoreMods/FormFieldsMapper/FormFieldsMapper.cshtml
@@ -1,16 +1,23 @@
-﻿@*@using Sitecore.Mvc
-@using Sitecore.Mvc.Presentation*@
-
-<section class="form-fields-mapper-container">
-    <div class="form-fields-mapper-header">
-        <h4>Map Fields</h4>
-    </div>
-    <div class="form-fields-mapper-body">
-        <table id="form-fields-mapper">
-            
-        </table>
-    </div>
-    <div class="form-fields-mapper-footer">
-        <button>Add Custom Mappings</button> 
-    </div>
-</section>
+﻿@using Sitecore.Mvc
+@using Sitecore.Mvc.Presentation
+@using Sitecore.Web.UI.Controls.Common.UserControls
+@*@model Sitecore.Speak.Components.Models.ComponentRenderingModel*@
+@model SitecoreMods.Feature.FormFieldsMapper.Models.FormFieldsMapperRenderingModel
+@{
+    Model.Class.Append("sc-FormFieldsMapper");
+    var htmlAttributes = Model.HtmlAttributes;
+}
+<div @htmlAttributes>
+    <section class="form-fields-mapper-container">
+        <div class="form-fields-mapper-header">
+            <h4>Map Fields</h4>
+        </div>
+        <div class="form-fields-mapper-body">
+            <table id="form-fields-mapper">
+            </table>
+        </div>
+        <div class="form-fields-mapper-footer">
+            <button>Add Custom Mappings</button>
+        </div>
+    </section>
+</div>
