FormFieldsMapper Styling updates

--- a/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/sitecore/shell/client/Applications/FormsBuilder/Layouts/Renderings/SitecoreMods/FormFieldsMapper/FormFieldsMapper.cshtml
+++ b/src/Feature/FormFieldsMapper/website/SitecoreMods.Feature.FormFieldsMapper/sitecore/shell/client/Applications/FormsBuilder/Layouts/Renderings/SitecoreMods/FormFieldsMapper/FormFieldsMapper.cshtml
@@ -7,17 +7,51 @@
     Model.Class.Append("sc-FormFieldsMapper");
     var htmlAttributes = Model.HtmlAttributes;
 }
+
+
 <div @htmlAttributes>
     <section class="form-fields-mapper-container">
         <div class="form-fields-mapper-header">
             <h4>Map Fields</h4>
         </div>
         <div class="form-fields-mapper-body">
-            <table id="form-fields-mapper">
+            <table id="form-fields-mapper" class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>
+                            Destination
+                        </th>
+                        <th>
+                            Source
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <label for="firstname" class="required">FirstName</label>
+                            <span>Firstname of the person</span>
+                        </td>
+                        <td>
+                            <textarea id="firstname" required></textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="lastname" class="required">LastName</label>
+                        </td>
+                        <td>
+                            <textarea id="lastname" required></textarea>
+                        </td>
+                    </tr>
+                </tbody>
             </table>
         </div>
         <div class="form-fields-mapper-footer">
             <button>Add Custom Mappings</button>
         </div>
     </section>
+    <div class="debug-info">
+
+    </div>
 </div>
