Form Fields Mapper Updates - new mapping working scenario

--- a/src/Feature/FormFieldsMapper/website/sitecore/shell/client/Applications/FormsBuilder/Layouts/Renderings/SitecoreMods/FormFieldsMapper/FormFieldsMapper.cshtml
+++ b/src/Feature/FormFieldsMapper/website/sitecore/shell/client/Applications/FormsBuilder/Layouts/Renderings/SitecoreMods/FormFieldsMapper/FormFieldsMapper.cshtml
@@ -12,6 +12,7 @@
 
 
 <div @htmlAttributes>
+        @Model.Layout
         <section class="form-fields-mapper-container">
             <div class="form-fields-mapper-header">
                 <h4>Map Fields</h4>
